# git-conflict-resolver

./: Dockerfile  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py
server/: app.py
