[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-conflict-resolver"
version = "1.0.0"
description = "Git conflict resolution environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"  

[tool.setuptools.packages.find]
where = ["."]
